--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,20 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"illuminate/html": "~5.0@dev",
+		"laracasts/flash": "dev-master",
+        "filp/whoops": "~1.0",
+		"itsgoingd/clockwork": "~1.7"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
+		"phpspec/phpspec": "~2.1",
+		"behat/behat": "~3.0@dev",
+		"behat/mink": "~1.6@dev",
+		"behat/mink-extension": "~2.0@dev",
+		"laracasts/behat-laravel-extension": "dev-master",
+        "fzaninotto/faker": "1.4.*@dev"
 	},
 	"autoload": {
 		"classmap": [
