--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,11 @@
     "vendor/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "animate-sass": "~0.6.3",
+    "bootstrap-sass-official": "~3.3.3",
+    "font-awesome-sass": "~4.3.1",
+    "jquery": "~2.1.3"
+  }
 }
